--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ jobs:
   web:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: apps/web
+
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -17,24 +21,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: "npm"
+          cache-dependency-path: apps/web/package-lock.json
 
-      - name: Instalar dependências (web)
-        working-directory: apps/web
+      - name: Instalar dependências
         run: npm ci
 
       - name: Lint
-        working-directory: apps/web
         run: npm run lint
 
       - name: Typecheck
-        working-directory: apps/web
         run: npx tsc --noEmit
 
       - name: Testes
-        working-directory: apps/web
         run: npm run test -- --run
 
       - name: Build
-        working-directory: apps/web
         run: npm run build
